2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	If the cursor theme changes, and the currently set size is not
	available for the new theme, we were not updating the cursor size in
	GConf, leading to bogus results when checking for metatheme equality.

	* appearance-style.c: (cursor_size_changed_cb),
	(update_cursor_size_scale), (cursor_size_scale_value_changed_cb):
	update cursor size GConf value when the theme changes; also don't write
	bogus values to GConf when we are only doing fuzzy matches

2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* theme-util.c: (theme_is_writable):
	* theme-util.h: move function here from common/

	* appearance-style.c: (gtk_theme_changed), (window_theme_changed),
	(icon_theme_changed), (cursor_theme_changed):
	* appearance-themes.c: (theme_selection_changed_cb): adapt callers

2007-10-27  Jens Granseuer  <jensgr@gmx.net>

	* theme-util.c: (theme_delete): if the parent directory is empty after
	deleting a theme, delete the parent directory, too

2007-10-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (cursor_theme_delete_cb), (style_init):
	* theme-util.c: (theme_delete): make the cursor themes delete button
	work

2007-10-25  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (style_init):
	* data/appearance.glade: move some more of the cursor size widget
	initialization to glade. This allows the slider to be updated properly
	on startup (bug #490103)

2007-10-25  Denis Washington  <denisw@svn.gnome.org>

	* appearance-themes.c: Take cursor size into account in theme_is_equal(),
	and also watch the cursor theme/size gconf keys for changes.

2007-10-24  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_load_from_gconf),
	(theme_details_changed_cb), (themes_init): return a new theme instead
	of munging whatever got passed in. Makes for a saner API

2007-10-24  Jens Granseuer  <jensgr@gmx.net>

	The fix for bug #420154 not only made the entry for the theme installer