@@ -1,5 +1,11 @@
 2007-10-27  Jens Granseuer  <jensgr@gmx.net>
 
+	* gnome-theme-info.c: (look_for_cursor_theme), (read_cursor_fonts),
+	(gnome_theme_init): ensure we always have the "default" cursor theme in
+	the list
+
+2007-10-27  Jens Granseuer  <jensgr@gmx.net>
+
 	* gnome-theme-info.c (gnome_theme_is_writable):
 	* gnome-theme-info.h: move this function to the appearance capplet
 
